--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -74,3 +74,51 @@
     @apply bg-background text-foreground;
   }
 }
+
+h1 {
+  @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+}
+h2 {
+  @apply scroll-m-20 text-3xl font-bold tracking-tight first:mt-0;
+}
+h3 {
+  @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+}
+h4 {
+  @apply scroll-m-20 text-xl font-semibold tracking-tight;
+}
+p {
+ @apply leading-relaxed [&:not(:first-child)]:mt-6;
+}
+blockquote {
+  @apply mt-6 border-l-2 pl-6 italic
+}
+ul {
+  @apply my-6 ml-6 list-disc [&>li]:mt-2
+}
+
+@layer utilities {
+  .flicker {
+    /* -webkit-transform: translate3d(0, 0, 0); */
+    -webkit-transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+  }
+  .flicker-wrapper {
+    -webkit-transform-style: preserve-3d;
+  }
+  .flicker-child{
+    -webkit-backdrop-filter: blur(3.5px);
+  }
+  .pause {
+    animation-play-state: paused;
+  }
+  .no-highlights {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+}
