--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -4,17 +4,19 @@
  
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --background: 180 100% 100%;
+    --foreground: 213 36% 5%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+    --card: 180 100% 100%;
+    --card-foreground: 213 36% 5%;
  
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --popover: 180 100% 100%;
+    --popover-foreground: 213 36% 5%;
  
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 213 16% 14%;
+    --primary-foreground: 180 100% 100%;
+    /* --primary: 222.2 47.4% 11.2%; */
+    /* --primary-foreground: 210 40% 98%; */
  
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -22,8 +24,10 @@
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
  
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    /* --accent: 210 40% 96.1%; */
+    /* --accent-foreground: 222.2 47.4% 11.2%; */
+    --accent: 37 91% 54%;
+    --accent-foreground: 37 89% 97%;
  
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
@@ -36,17 +40,19 @@
   }
  
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    --background: 213 36% 5%;
+    --foreground: 180 100% 100%;
  
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --card: 213 36% 5%;
+    --card-foreground: 180 100% 100%;
  
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+    --popover: 213 36% 5%;
+    --popover-foreground:180 100% 100%;
  
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: 180 100% 100%;
+    --primary-foreground: 213 16% 14%;
+    /* --primary: 210 40% 98%; */
+    /* --primary-foreground: 222.2 47.4% 11.2%; */
  
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
@@ -54,8 +60,10 @@
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
  
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    /* --accent: 217.2 32.6% 17.5%; */
+    /* --accent-foreground: 210 40% 98%; */
+    --accent: 37 89% 97%;
+    --accent-foreground: 37 91% 54%;
  
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
@@ -111,6 +119,9 @@ ul {
   }
   .pause {
     animation-play-state: paused;
+  }
+  .faster {
+    animation-duration: 7s;
   }
   .no-highlights {
     -webkit-tap-highlight-color: transparent;
